Fix logs page flickering issue, fix core throwing error in valid case. Added cleanup log message.

--- a/src/app/styles/components/LogView.styl
+++ b/src/app/styles/components/LogView.styl
@@ -12,8 +12,14 @@
     h3
         display: flex
         background: lighten($clr_pageBg, 3%)
+        justify-content: space-between
+        align-content: center
+        align-items: center
         font-weight: bold
         padding: 10px
+        button
+            margin: 0
+            padding: 5px
 
     textarea
         background: lighten($clr_pageBg, 5%)
